--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "fs": "0.0.1-security",
     "fs-extra": "^7.0.1",
     "http-errors": "~1.6.2",
+    "logger": "0.0.1",
+    "mongoose": "^5.4.19",
     "morgan": "~1.9.0",
     "nconf": "^0.10.0",
     "node-sass-middleware": "0.11.0",
